# weather-dashboard

./: README.md  weather-app.yaml
dashboard/: Dockerfile  app.py  pyproject.toml
dump/: dump.sql
read-api/: read_api.py
read-data/: Dockerfile  pyproject.toml  read_data.py
