[tool.poetry]
name = "read-data"
version = "0.1.0"
description = ""
authors = ["ionutpi"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
prefect = "^0.15.3"
SQLAlchemy = "^1.4.31"
mysql-connector-python = "8.0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
